methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:5: error: value avance is not a member of Nothing
possible cause: maybe a semicolon is missing before `value avance'?
    }avance() 
     ^